[gd_scene load_steps=8 format=3 uid="uid://cds7ueubmifll"]

[ext_resource type="Script" path="res://scenes/menu/main_menu/menu.gd" id="1_cradf"]
[ext_resource type="Theme" uid="uid://2mc6krbox3lb" path="res://assets/themes/MinimalUI.tres" id="2_mikqg"]
[ext_resource type="AudioStream" uid="uid://cj0eg234f1p8p" path="res://scenes/menu/main_menu/RUEMENU.mp3" id="2_tq4hc"]
[ext_resource type="Texture2D" uid="uid://knf5vpj42ex0" path="res://assets/pictures/4nabelle.png" id="3_3ee4d"]
[ext_resource type="PackedScene" uid="uid://chatrs5pao7ae" path="res://scenes/menu/singleplayer/singleplayer.tscn" id="5_5mspp"]
[ext_resource type="PackedScene" uid="uid://c1lvs415q0xx2" path="res://scenes/menu/multiplayer_menu/multiplayer_menu.tscn" id="6_wyn7f"]
[ext_resource type="PackedScene" uid="uid://bkt0alnvw6ufk" path="res://scenes/menu/settings/settings.tscn" id="7_ep3en"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cradf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3ee4d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -132.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_mikqg")

[node name="singleplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "singleplayer"

[node name="multiplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "multiplayer"

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "settings"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "quit"

[node name="singleplayer" parent="." instance=ExtResource("5_5mspp")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="multiplayer_menu" parent="." instance=ExtResource("6_wyn7f")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="settings" parent="." instance=ExtResource("7_ep3en")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tq4hc")
volume_db = -6.039
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/singleplayer" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
